Added the table

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
                   </thead>
 
                   <tbody class="table-body">
-                    <tr class="table-body-row">
+                    <!-- <tr class="table-body-row">
                       <td class="table-detail"></td>
                       <td class="table-detail"></td>
                       <td class="table-detail"></td>
-                    </tr>
+                    </tr> -->
                   </tbody>
                 </table>
               </div>
