Tried to fix the error but created another script file to try it on

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
                 <div class="wallet-in">
                   <h3 class="top-3">Budget</h3>
                   <i class="fa-solid fa-wallet fa-3x"></i>
-                  <!-- <h2 class="top wallet-size">
-                    <i class="fa-solid fa-dollar-sign"></i>
-                  </h2> -->
+                  <h2 class="top wallet-size">
+                    <i class="fa-solid fa-dollar-sign"></i>0
+                  </h2>
                 </div>
 
                 <div class="wallet-expense">
                   <h3 class="top-3">Expenses</h3>
                   <i class="fa-solid fa-credit-card fa-3x"></i>
-                  <!-- <h2 class="top wallet-out">
-                    <i class="fa-solid fa-dollar-sign"></i>20,000
-                  </h2> -->
+                  <h2 class="top wallet-out">
+                    <i class="fa-solid fa-dollar-sign"></i>0
+                  </h2>
                 </div>
 
                 <div class="balance-in-wallet">
                   <h3 class="top-3">Balance</h3>
                   <i class="fa-solid fa-hand-holding-dollar fa-3x"></i>
-                  <!-- <h2 class="top balance">
-                    <i class="fa-solid fa-dollar-sign"></i>50,000
-                  </h2> -->
+                  <h2 class="top balance">
+                    <i class="fa-solid fa-dollar-sign"></i>0
+                  </h2>
                 </div>
               </div>
 
@@ -107,6 +107,7 @@
       </div>
     </section>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="budget.js"></script>
   </body>
 </html>
