Fixed the default display

--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                 <div class="wallet-expense">
                   <h3 class="top-3">Expenses</h3>
                   <i class="fa-solid fa-credit-card fa-3x"></i>
-                  <!-- <h2 class="top wallet-out">
-                    <i class="fa-solid fa-dollar-sign"></i>0
-                  </h2> -->
+                  <h2 class="top wallet-out">
+                    <i class="fa-solid fa-dollar-sign"></i>
+                  </h2>
                 </div>
 
                 <div class="balance-in-wallet">
                   <h3 class="top-3">Balance</h3>
                   <i class="fa-solid fa-hand-holding-dollar fa-3x"></i>
-                  <!-- <h2 class="top balance">
+                  <h2 class="top balance">
                     <i class="fa-solid fa-dollar-sign"></i>0
-                  </h2> -->
+                  </h2>
                 </div>
               </div>
 
