--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script
+    <script
       src="https://kit.fontawesome.com/3ca0c365cd.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <link rel="stylesheet" href="Main css/normalize.css" />
     <link rel="stylesheet" href="Main css/main.css" />
     <link rel="stylesheet" href="style.css" />
@@ -60,25 +60,25 @@
                 <div class="wallet-in">
                   <h3 class="top-3">Budget</h3>
                   <i class="fa-solid fa-wallet fa-3x"></i>
-                  <h2 class="top wallet-size">
-                    <i class="fa-solid fa-dollar-sign"></i>
-                  </h2>
+                  <h3 class="top wallet-size">
+                    <i class="fa-solid fa-dollar-sign fa-sm"></i>0
+                  </h3>
                 </div>
 
                 <div class="wallet-expense">
                   <h3 class="top-3">Expenses</h3>
                   <i class="fa-solid fa-credit-card fa-3x"></i>
-                  <h2 class="top wallet-out">
-                    <i class="fa-solid fa-dollar-sign"></i>
-                  </h2>
+                  <h3 class="top wallet-out">
+                    <i class="fa-solid fa-dollar-sign fa-sm"></i>0
+                  </h3>
                 </div>
 
                 <div class="balance-in-wallet">
                   <h3 class="top-3">Balance</h3>
                   <i class="fa-solid fa-hand-holding-dollar fa-3x"></i>
-                  <h2 class="top balance">
-                    <i class="fa-solid fa-dollar-sign"></i>
-                  </h2>
+                  <h3 class="top balance">
+                    <i class="fa-solid fa-dollar-sign fa-sm"></i>0
+                  </h3>
                 </div>
               </div>
 
@@ -107,8 +107,8 @@
       </div>
     </section>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
     <!-- <script src="budget.js"></script> -->
-    <script src="script2.js"></script>
+    <!-- <script src="script2.js"></script> -->
   </body>
 </html>
